Fixed baseUrl for deployment in asf site

--- a/site/_config.yml
+++ b/site/_config.yml
@@ -22,7 +22,7 @@ description: Distributed pub-sub messaging system
 encoding: utf-8
 permalink: pretty
 pulsar_repo: https://github.com/apache/incubator-pulsar/tree/master
-baseurl: /incubator-pulsar/
+baseurl: /
 destination: ../generated-site/content
 
 versions:
