--- a/site/_data/sidebar.yaml
+++ b/site/_data/sidebar.yaml
@@ -35,6 +35,10 @@ groups:
     endpoint: InstanceSetup
   - title: Pulsar on Kubernetes
     endpoint: Kubernetes
+  - title: Pulsar on Google Container Engine
+    endpoint: Kubernetes/#pulsar-on-google-container-engine
+  - title: Pulsar on AWS
+    endpoint: Kubernetes/#pulsar-on-amazon-web-services
 
 - title: Concerns
   dir: concerns
