--- a/site/_data/sidebar.yaml
+++ b/site/_data/sidebar.yaml
@@ -40,13 +40,6 @@ groups:
   - title: Pulsar on AWS
     endpoint: Kubernetes/#pulsar-on-amazon-web-services
 
-- title: Concerns
-  dir: concerns
-  docs:
-  - title: Partitioned topics
-    endpoint: PartitionedTopics
-  - title: Retention and expiry
-    endpoint: RetentionExpiry
 - title: Pulsar administration
   dir: admin
   docs:
@@ -94,6 +87,14 @@ groups:
     endpoint: BinaryProtocol
   - title: Codebase
     endpoint: Codebase
+
+- title: Advanced
+  dir: advanced
+  docs:
+  - title: Partitioned topics
+    endpoint: PartitionedTopics
+  - title: Retention and expiry
+    endpoint: RetentionExpiry
 
 - title: Reference
   dir: reference
