add new /adaptors grouping and update docs

--- a/site/_data/sidebar.yaml
+++ b/site/_data/sidebar.yaml
@@ -73,12 +73,16 @@ groups:
     endpoint: PythonClient
   - title: WebSocket API
     endpoint: WebSocket
-  - title: Spark Streaming receiver
-    endpoint: PulsarSpark
-  - title: Apache Storm adaptor
-    endpoint: PulsarStorm
   - title: Simulation tools
     endpoint: SimulationTools
+
+- title: Adaptors
+  dir: adaptors
+  docs:
+  - title: Spark Streaming
+    endpoint: PulsarSpark
+  - title: Apache Storm
+    endpoint: PulsarStorm
 
 - title: Developing Pulsar
   dir: project
