--- a/site/_data/sidebar.yaml
+++ b/site/_data/sidebar.yaml
@@ -62,19 +62,17 @@ groups:
   - title: Modular load manager
     endpoint: ModularLoadManager
     
-- title: Pulsar applications
-  dir: applications
+- title: Client libraries
+  dir: clients
   docs:
-  - title: The Pulsar Java client
-    endpoint: JavaClient
-  - title: The Pulsar C++ client
-    endpoint: CppClient
-  - title: The Pulsar Python client
-    endpoint: PythonClient
+  - title: Java client
+    endpoint: Java
+  - title: C++ client
+    endpoint: Cpp
+  - title: Python client
+    endpoint: Python
   - title: WebSocket API
     endpoint: WebSocket
-  - title: Simulation tools
-    endpoint: SimulationTools
 
 - title: Adaptors
   dir: adaptors
@@ -84,14 +82,6 @@ groups:
   - title: Apache Storm
     endpoint: PulsarStorm
 
-- title: Developing Pulsar
-  dir: project
-  docs:
-  - title: Pulsar binary protocol
-    endpoint: BinaryProtocol
-  - title: Codebase
-    endpoint: Codebase
-
 - title: Advanced
   dir: advanced
   docs:
@@ -99,6 +89,16 @@ groups:
     endpoint: PartitionedTopics
   - title: Retention and expiry
     endpoint: RetentionExpiry
+
+- title: Developing Pulsar
+  dir: project
+  docs:
+  - title: Simulation tools
+    endpoint: SimulationTools
+  - title: Pulsar binary protocol
+    endpoint: BinaryProtocol
+  - title: Codebase
+    endpoint: Codebase
 
 - title: Reference
   dir: reference
