Addressed PR comments

--- a/pulsar-client-cpp/lib/auth/athenz/CMakeLists.txt
+++ b/pulsar-client-cpp/lib/auth/athenz/CMakeLists.txt
@@ -17,5 +17,5 @@
 # under the License.
 #
 
-add_library(ztsClient STATIC ZTSClient.cc)
+add_library(ztsClient SHARED ZTSClient.cc)
 target_link_libraries(ztsClient ${CLIENT_LIBS})
