--- a/pulsar-broker/src/test/resources/log4j.properties
+++ b/pulsar-broker/src/test/resources/log4j.properties
@@ -23,12 +23,12 @@
 #
 # Format is "<default threshold> (, <appender>)+
 
-log4j.rootLogger=INFO, CONSOLE
+log4j.rootLogger=OFF, CONSOLE
 
 log4j.logger.org.apache.zookeeper=OFF
 log4j.logger.org.apache.bookkeeper=OFF
 
-log4j.logger.org.apache.pulsar=INFO
+log4j.logger.org.apache.pulsar=OFF
 
 log4j.logger.org.testng.listener.TestListener=INFO
 
