Static link dependency libraries for C++ client lib and Python wrapper (#514)

--- a/pulsar-client-cpp/CMakeLists.txt
+++ b/pulsar-client-cpp/CMakeLists.txt
@@ -6,9 +6,9 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-# 
+#
 #   http://www.apache.org/licenses/LICENSE-2.0
-# 
+#
 # Unless required by applicable law or agreed to in writing,
 # software distributed under the License is distributed on an
 # "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -20,6 +20,9 @@
 cmake_minimum_required(VERSION 2.8)
 project (pulsar-cpp)
 
+option(LINK_STATIC "Link against static libraries" OFF)
+MESSAGE(STATUS "LINK_STATIC:  " ${LINK_STATIC})
+
 set(Boost_NO_BOOST_CMAKE ON)
 
 if (NOT CXX_STANDARD)
@@ -27,6 +30,8 @@ if (NOT CXX_STANDARD)
 endif(NOT CXX_STANDARD)
 
 set(CMAKE_CXX_FLAGS "-O3 -g -Wno-deprecated-declarations ${CXX_STANDARD} ${CMAKE_CXX_FLAGS}")
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
 set(PROTOBUF_LIBRARIES $ENV{PROTOBUF_LIBRARIES})
 set(LOG_CATEGORY_NAME $ENV{LOG_CATEGORY_NAME})
 
@@ -36,24 +41,50 @@ endif(NOT LOG_CATEGORY_NAME)
 
 add_definitions(-DLOG_CATEGORY_NAME=${LOG_CATEGORY_NAME})
 
+if (LINK_STATIC)
+    SET(Boost_USE_STATIC_LIBS   ON)
+    SET(OPENSSL_USE_STATIC_LIBS TRUE)
+
+    find_library(ZLIB_LIBRARY_PATH REQUIRED NAMES libz.a z)
+    find_library(PROTOBUF_LIBRARIES NAMES libprotobuf.a)
+    find_library(CURL_LIBRARY_PATH NAMES libcurl.a curl)
+    find_library(LIB_JSON NAMES libjsoncpp.a)
+    find_library(LOG4CXX_LIBRARY_PATH NAMES liblog4cxx.a)
+
+    # Libraries needed by log4cxx to link statically with
+    find_library(APR_LIBRARY_PATH NAMES libapr-1.a PATHS /usr/lib /usr/local/apr/lib /usr/local/opt/apr/libexec/lib/)
+    find_library(APR_UTIL_LIBRARY_PATH NAMES libaprutil-1.a PATHS /usr/lib /usr/local/apr/lib /usr/local/opt/apr-util/libexec/lib/)
+    find_library(EXPAT_LIBRARY_PATH NAMES libexpat.a expat)
+    if (APPLE)
+        find_library(ICONV_LIBRARY_PATH NAMES libiconv.a iconv)
+    else ()
+        set(ICONV_LIBRARY_PATH )
+    endif ()
+else()
+    # Link to shared libraries
+    find_package(ZLIB REQUIRED)
+    if (NOT PROTOBUF_LIBRARIES)
+      find_package(ProtoBuf QUIET)
+      if (NOT ProtoBuf_FOUND)
+        find_library(PROTOBUF_LIBRARIES protobuf)
+      endif (NOT ProtoBuf_FOUND)
+    endif (NOT PROTOBUF_LIBRARIES)
+
+    find_library(LIB_JSON jsoncpp)
+    find_library(LOG4CXX_LIBRARY_PATH log4cxx)
+    find_library(CURL_LIBRARY_PATH curl)
+    find_path(LOG4CXX_INCLUDE_PATH log4cxx/logger.h)
+endif (LINK_STATIC)
+
 find_package(Boost REQUIRED COMPONENTS program_options filesystem regex
-                                        thread system python
-            )
+                                        thread system python)
 find_package(PythonLibs REQUIRED)
+
+
 find_package(OpenSSL REQUIRED)
-find_package(ZLIB REQUIRED)
-if (NOT PROTOBUF_LIBRARIES)
-  find_package(ProtoBuf QUIET)
-  if (NOT ProtoBuf_FOUND)
-    find_library(PROTOBUF_LIBRARIES protobuf)
-  endif (NOT ProtoBuf_FOUND)
-endif (NOT PROTOBUF_LIBRARIES)
-find_library(LOG4CXX_LIBRARY_PATH log4cxx)
-find_library(CURL_LIBRARY_PATH curl)
-find_path(LOG4CXX_INCLUDE_PATH log4cxx/logger.h)
 find_path(GTEST_INCLUDE_PATH gtest/gtest.h)
 find_path(JSON_INCLUDE_PATH jsoncpp)
-find_library(LIB_JSON jsoncpp)
+find_path(LOG4CXX_INCLUDE_PATH log4cxx/logger.h)
 
 if (NOT LIB_JSON)
     find_library(LIB_JSON json_cpp)
@@ -91,13 +122,23 @@ set(COMMON_LIBS
   ${Boost_DATE_TIME_LIBRARY}
   ${Boost_ATOMIC_LIBRARY}
   ${OPENSSL_LIBRARIES}
-  ${ZLIB_LIBRARIES}
+  ${ZLIB_LIBRARY_PATH}
   ${PROTOBUF_LIBRARIES}
   ${LOG4CXX_LIBRARY_PATH}
+  ${APR_LIBRARY_PATH}
+  ${APR_UTIL_LIBRARY_PATH}
+  ${EXPAT_LIBRARY_PATH}
+  ${ICONV_LIBRARY_PATH}
   ${CURL_LIBRARY_PATH}
   ${ADDITIONAL_LIBRARIES}
   ${LIB_JSON}
+  dl
+  pthread
 )
+
+if(NOT APPLE)
+    set(COMMON_LIBS ${COMMON_LIBS} rt)
+endif ()
 
 link_directories(${CMAKE_BINARY_DIR}/lib)
 
