Don't attach pulsar-*-{src,bin}.tar.gz to maven artifacts

--- a/all/pom.xml
+++ b/all/pom.xml
@@ -100,7 +100,6 @@
     <plugins>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.6</version>
         <executions>
           <execution>
             <id>distro-assembly</id>
@@ -109,6 +108,7 @@
               <goal>single</goal>
             </goals>
             <configuration>
+              <attach>false</attach>
               <tarLongFileMode>posix</tarLongFileMode>
               <finalName>apache-pulsar-${project.version}</finalName>
               <descriptors>
