--- a/kubernetes/generic/broker.yaml
+++ b/kubernetes/generic/broker.yaml
@@ -50,7 +50,7 @@ spec:
         spec:
             containers:
               - name: broker
-                image: streamlio/pulsar:latest
+                image: apachepulsar/pulsar:latest
                 command: ["sh", "-c"]
                 args:
                   - >
@@ -105,7 +105,7 @@ metadata:
 spec:
     containers:
       - name: pulsar-admin
-        image: streamlio/pulsar:latest
+        image: apachepulsar/pulsar:latest
         command: ["sh", "-c"]
         args:
           - >
