--- a/kubernetes/google-container-engine/zookeeper.yaml
+++ b/kubernetes/google-container-engine/zookeeper.yaml
@@ -90,7 +90,7 @@ spec:
                             topologyKey: "kubernetes.io/hostname"
             containers:
               - name: zookeeper
-                image: streamlio/pulsar:latest
+                image: apachepulsar/pulsar:latest
                 command: ["sh", "-c"]
                 args:
                   - >
