Fixed broken links to admin-api/overview

--- a/site/_data/features.yaml
+++ b/site/_data/features.yaml
@@ -56,4 +56,4 @@
   content: |
         REST Admin API for provisioning, administration, tools and monitoring. Deploy on bare metal
         or [Kubernetes](https://kubernetes.io).
-  endpoint: admin/AdminInterface
+  endpoint: admin-api/overview
