Added documentation on how to start the standalone service with Docker

--- a/site/_data/sidebar.yaml
+++ b/site/_data/sidebar.yaml
@@ -23,6 +23,8 @@ groups:
   docs:
   - title: Run Pulsar locally
     endpoint: LocalCluster
+  - title: Pulsar in Docker
+    endpoint: docker
   - title: Client libraries
     endpoint: Clients
   - title: Concepts and architecture
