--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -106,11 +106,11 @@ maxUnackedMessagesPerBroker=0
 # limit/2 messages   
 maxUnackedMessagesPerSubscriptionOnBrokerBlocked=0.16
 
-# Default number of message dispatching throttling-limit for every topic. Using a value of 0, is disabling default
+# Default messages per second dispatch throttling-limit for every topic. Using a value of 0, is disabling default
 # message dispatch-throttling 
 dispatchThrottlingRatePerTopicInMsg=0
 
-# Default number of message-bytes dispatching throttling-limit for every topic. Using a value of 0, is disabling
+# Default bytes per second dispatch throttling-limit for every topic. Using a value of 0, is disabling
 # default message-byte dispatch-throttling
 dispatchThrottlingRatePerTopicInByte=0
 
