add yamal configuration

--- a/all/pom.xml
+++ b/all/pom.xml
@@ -78,6 +78,11 @@
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-yaml</artifactId>
+    </dependency>
   
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
