--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@ flexible messaging model and an intuitive client API.</description>
     <aspectj.version>1.8.9</aspectj.version>
     <rocksdb.version>5.5.5</rocksdb.version>
     <slf4j.version>1.7.25</slf4j.version>
-    <log4j2.version>2.6.1</log4j2.version>
+    <log4j2.version>2.8.2</log4j2.version>
   </properties>
 
   <dependencyManagement>
@@ -356,6 +356,12 @@ flexible messaging model and an intuitive client API.</description>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-slf4j-impl</artifactId>
         <version>${log4j2.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.fasterxml.jackson.dataformat</groupId>
+        <artifactId>jackson-dataformat-yaml</artifactId>
+        <version>2.5.0</version>
       </dependency>
 
       <dependency>
