--- a/pom.xml
+++ b/pom.xml
@@ -357,6 +357,12 @@ flexible messaging model and an intuitive client API.</description>
         <artifactId>log4j-slf4j-impl</artifactId>
         <version>${log4j2.version}</version>
       </dependency>
+      
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-web</artifactId>
+        <version>${log4j2.version}</version>
+      </dependency>
 
       <dependency>
         <groupId>com.fasterxml.jackson.dataformat</groupId>
