Add configuration to enable throttling for non-backlog consumers

--- a/conf/standalone.conf
+++ b/conf/standalone.conf
@@ -103,6 +103,10 @@ dispatchThrottlingRatePerTopicInMsg=0
 # default message-byte dispatch-throttling
 dispatchThrottlingRatePerTopicInByte=0
 
+# Default dispatch-throttling is disabled for consumers which already caught-up with published messages and
+# don't have backlog. This enables dispatch-throttling for non-backlog consumers as well.
+dispatchThrottlingOnNonBacklogConsumerEnabled=false
+
 # Max number of concurrent lookup request broker allows to throttle heavy incoming lookup traffic
 maxConcurrentLookupRequest=10000
 
