Documentation for Kafka/Pulsar client wrapper

--- a/site/_data/sidebar.yaml
+++ b/site/_data/sidebar.yaml
@@ -97,6 +97,8 @@ groups:
 - title: Adaptors
   dir: adaptors
   docs:
+  - title: Apache Kafka client wrapper
+    endpoint: KafkaWrapper
   - title: Spark Streaming
     endpoint: PulsarSpark
   - title: Apache Storm
