Prevent message duplication when active consumer is changed

--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -70,6 +70,9 @@ brokerDeleteInactiveTopicsFrequencySeconds=60
 # How frequently to proactively check and purge expired messages
 messageExpiryCheckIntervalInMinutes=5
 
+# How long to delay rewinding cursor and dispatching messages when active consumer is changed
+activeConsumerFailoverDelayTimeMillis=1000
+
 # Set the default behavior for message deduplication in the broker
 # This can be overridden per-namespace. If enabled, broker will reject
 # messages that were already stored in the topic
