Added end user documentation for encryption

--- a/site/_data/sidebar.yaml
+++ b/site/_data/sidebar.yaml
@@ -111,6 +111,8 @@ groups:
     endpoint: PartitionedTopics
   - title: Retention and expiry
     endpoint: RetentionExpiry
+  - title: Encryption
+    endpoint: Encryption
 
 - title: Developing Pulsar
   dir: project
