--- a/site/_config.yml
+++ b/site/_config.yml
@@ -25,8 +25,9 @@ pulsar_repo: https://github.com/apache/incubator-pulsar/tree/master
 baseurl: /
 destination: ../generated-site/content
 
-current_version: 1.19.0-incubating
+current_version: 1.20.0-incubating
 archived_releases:
+  - 1.19.0-incubating
 
 markdown: kramdown
 kramdown:
